kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: colabri
  labels:
    name: colabri
    environment: production
